cmake_minimum_required(VERSION 2.8)

project(RayTracing)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")

SET(
	RAY_TRACING_INCLUDE_DIR
	include/
   )
SET(
	RAY_TRACING_SRC_LIST
	src/main.cpp
   )
SET(
	OPENCV_LIBS
	libopencv_core.so
	/home/wangzd/mylib/opencv/libopencv_highgui.so	
   )

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
INCLUDE_DIRECTORIES(${RAY_TRACING_INCLUDE_DIR})
LINK_DIRECTORIES(/usr/lib64)
ADD_EXECUTABLE(RayTracing ${RAY_TRACING_SRC_LIST})
TARGET_LINK_LIBRARIES(RayTracing ${OPENCV_LIBS})

